--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,14 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Rick & Morty Wiki | cstrecht</title>
   </head>
